--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "description": "### [Live Site](https://metaverse-sage-psi.vercel.app/)",
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
