--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.15.5",
+    "@clerk/nextjs": "^6.3.4",
     "eslint-config-next": "13.0.3",
     "firebase": "^11.0.2",
     "framer-motion": "^7.6.7",
